@@ -44,6 +44,8 @@ int readKey(GWEN_DB_NODE *dbArgs, int argc, char **argv);
 
 int showUser(GWEN_DB_NODE *dbArgs, int argc, char **argv);
 
+int changePin(GWEN_DB_NODE *dbArgs, int argc, char **argv);
+
 
 #endif /* GCT_TOOL_GLOBALS_H */
 
